# rconf

./: .gitignore  Cargo.toml  README.md
examples/: config-archive.tar  configs.toml  packages.toml
src/: main.rs  script.rs
src/configs/: error.rs  manager.rs  mod.rs  path.rs
