[package]
name = "rconf"
version = "0.1.0"
authors = ["joshmeranda <joshmeranda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
tar = "0.4"
dirs = "2.0"
clap = "2.33"
serde = "1.0"
serde_derive = "1.0"